src/main/java/com/example/loginpractice/error/ErrorResponse.java
package com.example.loginpractice.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@AllArgsConstructor
@Getter
public class ErrorResponse {
    private String message;
}
